--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -19,10 +19,9 @@
             <a href="./Dashboard.html">Dashboard</a>
             <a href="./Projects-List.html">Projects</a>
             <a href="./Tickets-List.html">Tickets</a>
-            <a href="../index.html">Logout</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">User</a>
+                <a class="Drop-button">☰</a>
                 <div class="Drop-content">
                     <a href="#">Profile</a>
                     <a href="#">Settings</a>
