--- a/pages/Forms-Ticket.html
+++ b/pages/Forms-Ticket.html
@@ -8,19 +8,28 @@
 </head>
 <body>
         <header>
-            <div class="logo">
-                <a href="./Dashboard.html">
-                    <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
-                </a>
+        <div class="logo">
+            <a href="../index.html">
+                <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
+            </a>
+        </div>
+        <h2>Welcome Maxence Gautier-Grall</h2>
+        <nav>
+            <a href="./Dashboard.html">Dashboard</a>
+            <a href="./Projects-List.html">Projects</a>
+            <a href="./Tickets-List.html">Tickets</a>
+            
+            <div class="Profile-drop">
+                <a class="Drop-button">☰</a>
+                <div class="Drop-content">
+                    <a href="#">Profile</a>
+                    <a href="#">Settings</a>
+                    <a href="../index.html">Logout</a>
+                </div>   
+                
             </div>
-            <h2>Create New Ticket</h2>
-            <nav>
-                <a href="./Dashboard.html">Dashboard</a>
-                <a href="./Projects-List.html">Projects</a>
-                <a href="./Tickets-List.html">Tickets</a>
-                <a href="../index.html">Logout</a>
-            </nav>
-        </header>
+        </nav>
+    </header>
 
     <section>
 
