--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -19,6 +19,7 @@
             <a href="./Dashboard.html">Dashboard</a>
             <a href="./Projects-List.html">Projects</a>
             <a href="./Tickets-List.html">Tickets</a>
+            <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
                 <a class="Drop-button">☰</a>
@@ -41,7 +42,7 @@
             <div class="stats-list">
 
                 <div class="stats-list-clients">
-                    <div class="cadre" href="./Client.html">Clients: 36</div>
+                    <a class="cadre" href="./Clients-List.html">Clients: 36</a>
                     <a class="cadre" href="./Projects-List.html">Projects: 45</a>
                     <a class="cadre" href="./Tickets-List.html">Tickets: 125</a>
                 </div>
