--- a/pages/Forms-Ticket.html
+++ b/pages/Forms-Ticket.html
@@ -18,6 +18,7 @@
             <a href="./Dashboard.html">Dashboard</a>
             <a href="./Projects-List.html">Projects</a>
             <a href="./Tickets-List.html">Tickets</a>
+            <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
                 <a class="Drop-button">☰</a>
