--- a/pages/Tickets-List.html
+++ b/pages/Tickets-List.html
@@ -24,7 +24,7 @@
                 <a class="Drop-button">☰</a>
                 <div class="Drop-content">
                     <a href="#">Profile</a>
-                    <a href="#">Settings</a>
+                    <a href="../pages/Settings.html">Settings</a>
                     <a href="../index.html">Logout</a>
                 </div>   
                 
