--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -24,7 +24,7 @@
             <div class="Profile-drop">
                 <a class="Drop-button">☰</a>
                 <div class="Drop-content">
-                    <a href="#">Profile</a>
+                     <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
                     <a href="../index.html">Logout</a>
                 </div>   
