--- a/pages/Profil.html
+++ b/pages/Profil.html
@@ -13,7 +13,7 @@
                 <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
             </a>
         </div>
-        <h2>Settings</h2>
+        <h2>Profile</h2>
         <nav>
             <a href="./Dashboard.html">Dashboard</a>
             <a href="./Projects-List.html">Projects</a>
@@ -31,5 +31,10 @@
             </div>
         </nav>
     </header>
+
+
+    <section>
+        
+    </section>
 </body>
 </html>
