--- a/pages/Forms-Ticket.html
+++ b/pages/Forms-Ticket.html
@@ -9,7 +9,7 @@
 <body>
         <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="./Dashboard.html">
                 <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
             </a>
         </div>
@@ -23,7 +23,7 @@
             <div class="Profile-drop">
                 <a class="Drop-button">☰</a>
                 <div class="Drop-content">
-                    <a href="#">Profile</a>
+                    <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
                     <a href="../index.html">Logout</a>
                 </div>   
