--- a/pages/Project.html
+++ b/pages/Project.html
@@ -10,7 +10,7 @@
 
      <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="./Dashboard.html">
                 <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
             </a>
         </div>
@@ -24,7 +24,7 @@
             <div class="Profile-drop">
                 <a class="Drop-button">☰</a>
                 <div class="Drop-content">
-                    <a href="#">Profile</a>
+                    <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
                     <a href="../index.html">Logout</a>
                 </div>   
