"optionnal" update + JS

--- a/pages/Forms-Project.html
+++ b/pages/Forms-Project.html
@@ -21,7 +21,7 @@
             <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">☰</a>
+                <button class="Drop-button">☰</button>
                 <div class="Drop-content">
                     <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
@@ -70,6 +70,6 @@
     </section>
 
     <script src="../JS/Project-Forms.js"></script>
-
+    <script src="../JS/Header.js"></script>
 </body>
 </html>
