--- a/pages/Inscription.html
+++ b/pages/Inscription.html
@@ -36,10 +36,13 @@
             <br>
             <label for="password">Password Verification:</label>
             <input type="password" id="passwordVerif" name="passwordVerif">
-            <div id="passwordVerif_error" class="error-text titanic">caca.</div>
+            <div id="passwordVerif_error" class="error-text titanic">Le mot de passe ne correspond pas.</div>
             <br>
             <button type="submit" class="Submit-button">Creer</button>
             <a href="../index.html">Se connecter</a>
         </form>
+
+        <script src="../JS/Inscription.js"></script>
+        
 </body>
 </html>
