--- a/pages/Settings.html
+++ b/pages/Settings.html
@@ -21,7 +21,7 @@
             <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">☰</a>
+                <button class="Drop-button">☰</button>
                 <div class="Drop-content">
                     <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
@@ -31,5 +31,7 @@
             </div>
         </nav>
     </header>
+
+    <script src="../JS/Header.js"></script>
 </body>
 </html>
