--- a/pages/Client.html
+++ b/pages/Client.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    Client page
+    <header>
+        <div class="logo">
+            <a href="./Dashboard.html">
+                <img src="../assets/img/Logo.png" alt="Logo de moi hyper bg">
+            </a>
+        </div>
+        <h2>Welcome Maxence Gautier-Grall</h2>
+        <nav>
+            <a href="./Dashboard.html">Dashboard</a>
+            <a href="./Projects-List.html">Projects</a>
+            <a href="./Tickets-List.html">Tickets</a>
+            <a href="./Clients-List.html">Clients</a>
+            
+            <div class="Profile-drop">
+                <button class="Drop-button">☰</button>
+                <div class="Drop-content">
+                     <a href="../pages/Profil.html">Profile</a>
+                    <a href="../pages/Settings.html">Settings</a>
+                    <a href="../index.html">Logout</a>
+                </div>   
+                
+            </div>
+        </nav>
+    </header>
+
+    <script src="../JS/Header.js"></script>
 </body>
+
+
 </html>
