--- a/pages/Clients-List.html
+++ b/pages/Clients-List.html
@@ -22,7 +22,7 @@
             <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">☰</a>
+                <button class="Drop-button">☰</button>
                 <div class="Drop-content">
                      <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
@@ -51,6 +51,6 @@
                 </div>
     </section>
 
-
+    <script src="../JS/Header.js"></script>
 </body>
 </html>
