--- a/pages/Dashboard.html
+++ b/pages/Dashboard.html
@@ -22,8 +22,8 @@
             <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">☰</a>
-                <div class="Drop-content">
+                <button class="Drop-button">☰</button>
+                <div class="Drop-content titanic">
                      <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
                     <a href="../index.html">Logout</a>
@@ -115,6 +115,6 @@
     </div>
 
 
-    
+    <script src="../JS/Header.js"></script>
 </body>
 </html>
