--- a/pages/Forms-Ticket.html
+++ b/pages/Forms-Ticket.html
@@ -21,7 +21,7 @@
             <a href="./Clients-List.html">Clients</a>
             
             <div class="Profile-drop">
-                <a class="Drop-button">☰</a>
+                <button class="Drop-button">☰</button>
                 <div class="Drop-content">
                     <a href="../pages/Profil.html">Profile</a>
                     <a href="../pages/Settings.html">Settings</a>
@@ -74,6 +74,7 @@
     </section>
 
     <script src="../JS/Ticket-Forms.js"></script>
+    <script src="../JS/Header.js"></script>
 </body>
 
 
