--- a/pages/Inscription.html
+++ b/pages/Inscription.html
@@ -20,7 +20,7 @@
 
      <form id="submitform_connexion" action="../index.html" method="GET" novalidate>
             <h2>Inscription</h2>
-            <label for="type_inscription">Project:</label>
+            <label for="type_inscription">Type:</label>
                 <select type="text" id="type_inscription" name="type_inscription">
                     <option value="project1">Client</option>
                     <option value="project1">Colaborator</option>
