--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <a href="./pages/Forgotten-Password.html">Forgotten password</a> 
         </form>
 
+        <div class="ValidForms titanic">
+            <p>Connexion</p>
+        </div>
+
     </section>
 
     <script src="./JS/Connexion.js"></script>
