--- a/pages/Forgotten-Password.html
+++ b/pages/Forgotten-Password.html
@@ -28,6 +28,9 @@
             <button type="submit" class="Submit-button">Envoyer</button>
             <a href="../index.html">Se connecter</a>
         </form>
+        <div class="ValidForms titanic">
+            <p>Email Send</p>
+        </div>
 
     </section>
 
