--- a/pages/Forms-Ticket.html
+++ b/pages/Forms-Ticket.html
@@ -70,6 +70,10 @@
             </form>
         </div>
 
+        <div class="ValidForms titanic">
+            <p>Formulaire envoyé</p>
+        </div>
+
 
     </section>
 
